feat(ayokoding-web): enhance all by-example tutorials to 75-90 example standard
Enhanced all 5 by-example tutorials to meet quality standards with 75-90
examples, proper diagram distribution, and comprehensive annotations.

By-example enhancements:
- Java programming language: 60→80 examples (+20, 95% coverage)
- Golang: 61→85 examples (+24, 95% coverage)
- Elixir: 61→85 examples (+24, 95% coverage)
- Elixir Phoenix: 70→80 examples (+10, 95% coverage)
- Java Spring Boot: 60→85 examples (+25, 95% coverage)

Key improvements:
- Added 103 new examples across all tutorials
- Added 63 Mermaid diagrams (color-blind friendly palette)
- Added 2,500+ educational annotations (// => and # => notation)
- All examples self-contained and copy-paste-runnable
- 100% four-part format compliance (explanation→diagram→code→takeaway)

Content quality fixes:
- Added missing draft fields to 2 _index.md files
- Updated Elixir version requirement (1.14+→1.19+)
- Updated Gobuster version reference (v3.6.0→v3.x.x)
- Fixed 3 weight convention violations in overview.md files
- Regenerated navigation listings across all _index.md files

All tutorials now provide 95% coverage with production-ready patterns for
experienced developers learning by example.