@@ -3,15 +3,15 @@ title: "Advanced"
 date: 2025-12-24T00:00:00+07:00
 draft: false
 weight: 1000003
-description: "Advanced Spring Boot through 20 examples: metrics, distributed tracing, resilience patterns, custom auto-configuration, and production deployment"
+description: "Advanced Spring Boot through 30 examples: microservices, observability, resilience, Kubernetes, event sourcing, CQRS, API Gateway, and production patterns"
 tags:
   ["spring-boot", "tutorial", "by-example", "advanced", "microservices", "observability", "resilience", "production"]
 categories: ["learn"]
 ---
 
-Master advanced Spring Boot patterns through 20 examples covering microservices, observability, resilience, custom auto-configuration, and production deployment.
+Master advanced Spring Boot patterns through 30 examples covering microservices, observability, resilience, Kubernetes integration, event sourcing, CQRS, API Gateway patterns, and production deployment.
 
-## Example 41: RestTemplate - Synchronous HTTP Client
+### Example 41: RestTemplate - Synchronous HTTP Client
 
 RestTemplate provides synchronous REST client capabilities with automatic JSON/XML conversion and error handling.
 
@@ -69,7 +69,9 @@ public class UserApiClient {
 record User(Long id, String name, String email, String phone) {}
 ```
 
-## Example 42: WebClient - Reactive Non-Blocking Client
+**Key Takeaway**: Use `RestTemplate` for synchronous HTTP calls when blocking is acceptable, but prefer WebClient for reactive non-blocking communication in high-throughput microservices.
+
+### Example 42: WebClient - Reactive Non-Blocking Client
 
 WebClient provides reactive, non-blocking HTTP communication with backpressure support and functional API.
 
@@ -137,7 +139,9 @@ flowchart LR
     style F fill:#029E73,stroke:#000,color:#fff
 ```
 
-## Example 43: Feign Clients - Declarative REST Clients
+**Key Takeaway**: WebClient enables reactive programming with non-blocking I/O—threads are released during HTTP calls and notified via callbacks, allowing higher concurrency than RestTemplate's blocking model.
+
+### Example 43: Feign Clients - Declarative REST Clients
 
 Feign provides declarative REST client interfaces with automatic request/response mapping and load balancing integration.
 
@@ -186,7 +190,9 @@ public class UserService {
 //         readTimeout: 10000
 ```
 
-## Example 44: Service Discovery - Eureka Client
+**Key Takeaway**: Feign eliminates HTTP client boilerplate through declarative interfaces—define methods with Spring MVC annotations and Feign generates implementations automatically.
+
+### Example 44: Service Discovery - Eureka Client
 
 Service discovery allows microservices to find and communicate with each other without hard-coded URLs.
 
@@ -256,7 +262,9 @@ flowchart TD
     style E fill:#CA9161,stroke:#000,color:#000
 ```
 
-## Example 45: Spring Boot Actuator - Health & Metrics
+**Key Takeaway**: Eureka enables service discovery—microservices register with Eureka Server and discover other services by name instead of hardcoded URLs, enabling dynamic scaling and failover.
+
+### Example 45: Spring Boot Actuator - Health & Metrics
 
 Actuator provides production-ready endpoints for monitoring, health checks, and application metrics.
 
@@ -313,7 +321,9 @@ public class MetricsController {
 // GET /actuator/info => Application info
 ```
 
-## Example 46: Custom Metrics - Micrometer
+**Key Takeaway**: Actuator exposes production-ready endpoints for monitoring—use custom `HealthIndicator` implementations to expose application-specific health checks beyond Spring Boot's auto-configured probes.
+
+### Example 46: Custom Metrics - Micrometer
 
 Micrometer provides vendor-neutral metrics instrumentation for monitoring application performance.
 
@@ -364,7 +374,9 @@ public class OrderMetricsService {
 // GET /actuator/prometheus => Prometheus exposition format
 ```
 
-## Example 47: Distributed Tracing - Micrometer Tracing
+**Key Takeaway**: Micrometer provides vendor-neutral instrumentation—use `Counter`, `Gauge`, and `Timer` to track business metrics and export to monitoring systems like Prometheus without vendor lock-in.
+
+### Example 47: Distributed Tracing - Micrometer Tracing
 
 Distributed tracing tracks requests across microservices using trace and span IDs for debugging and performance analysis.
 
@@ -434,7 +446,9 @@ sequenceDiagram
     Note over Z: Visualize trace timeline
 ```
 
-## Example 48: Structured Logging - JSON with MDC
+**Key Takeaway**: Distributed tracing propagates trace IDs across microservices—use Micrometer Tracing with Zipkin to visualize request flows and identify bottlenecks in distributed systems.
+
+### Example 48: Structured Logging - JSON with MDC
 
 Structured logging outputs JSON format with Mapped Diagnostic Context (MDC) for trace correlation.
 
@@ -491,7 +505,9 @@ public class OrderLoggingController {
 //  "requestId":"uuid","path":"/orders","orderId":"1","userId":"123"}
 ```
 
-## Example 49: Circuit Breaker - Resilience4j
+**Key Takeaway**: Structured logging with MDC enables correlation—use Logstash encoder for JSON output and MDC for request-scoped context like trace IDs, making logs searchable in centralized logging systems.
+
+### Example 49: Circuit Breaker - Resilience4j
 
 Circuit breaker prevents cascading failures by stopping calls to failing services and providing fallback responses.
 
@@ -546,7 +562,9 @@ stateDiagram-v2
     note right of HALF_OPEN: Testing recovery
 ```
 
-## Example 50: Retry Pattern - Exponential Backoff
+**Key Takeaway**: Circuit breaker prevents cascading failures—configure thresholds to automatically open circuit when failure rate exceeds limits, providing fallback responses while the failing service recovers.
+
+### Example 50: Retry Pattern - Exponential Backoff
 
 Retry pattern automatically retries failed operations with exponential backoff to handle transient failures.
 
@@ -587,7 +605,9 @@ record PaymentRequest(Long orderId, BigDecimal amount) {}
 record Payment(Long id, String status, String message) {}
 ```
 
-## Example 51: Rate Limiting - API Throttling
+**Key Takeaway**: Retry with exponential backoff handles transient failures—configure max attempts and backoff multiplier to automatically retry failed operations with increasing delays between attempts.
+
+### Example 51: Rate Limiting - API Throttling
 
 Rate limiting controls the number of requests a client can make within a time window to prevent abuse.
 
@@ -630,7 +650,9 @@ public class ApiController {
 record ApiResponse(String status, String message) {}
 ```
 
-## Example 52: Bulkhead Pattern - Thread Pool Isolation
+**Key Takeaway**: Rate limiting protects APIs from abuse—use `@RateLimiter` to enforce request quotas per time window, preventing service degradation from excessive traffic.
+
+### Example 52: Bulkhead Pattern - Thread Pool Isolation
 
 Bulkhead pattern isolates resources using separate thread pools to prevent one failing service from consuming all threads.
 
@@ -671,7 +693,9 @@ public class ReportService {
 record Report(Long userId, String title, LocalDateTime generatedAt) {}
 ```
 
-## Example 53: Custom Starter - Creating Reusable Auto-Configuration
+**Key Takeaway**: Bulkhead pattern isolates thread pools—use `@Bulkhead` with thread pool type to prevent resource exhaustion from one failing service, ensuring failures don't cascade across the application.
+
+### Example 53: Custom Starter - Creating Reusable Auto-Configuration
 
 Custom starters provide reusable auto-configuration modules that can be shared across multiple projects.
 
@@ -727,7 +751,9 @@ public class CustomAutoConfiguration {
 //     apiKey: secret-key
 ```
 
-## Example 54: Conditional Beans - Context-Aware Configuration
+**Key Takeaway**: Create custom starters to encapsulate reusable auto-configuration—define `@ConfigurationProperties`, auto-configuration classes, and register in `META-INF/spring/org.springframework.boot.autoconfigure.AutoConfiguration.imports` for distribution.
+
+### Example 54: Conditional Beans - Context-Aware Configuration
 
 Conditional beans allow selective bean creation based on classpath, properties, or existing beans.
 
@@ -773,7 +799,9 @@ interface CacheService {
 }
 ```
 
-## Example 55: Configuration Properties - Type-Safe Configuration
+**Key Takeaway**: Conditional beans enable context-aware configuration—use `@ConditionalOnClass`, `@ConditionalOnProperty`, and `@ConditionalOnMissingBean` to create or skip beans based on classpath, properties, or existing bean presence.
+
+### Example 55: Configuration Properties - Type-Safe Configuration
 
 Configuration properties provide type-safe, validated, and IDE-friendly application configuration.
 
@@ -842,7 +870,9 @@ public class MailConfig {
 //       reset: password-reset.html
 ```
 
-## Example 56: Custom Actuator Endpoints - Operational Insights
+**Key Takeaway**: Use `@ConfigurationProperties` for type-safe configuration—bind hierarchical properties to POJOs with validation, enabling compile-time safety and IDE autocomplete for application settings.
+
+### Example 56: Custom Actuator Endpoints - Operational Insights
 
 Custom actuator endpoints expose application-specific operational data through the management interface.
 
@@ -895,7 +925,9 @@ record ApplicationInfo(String name, String[] profiles, int beanCount, String jav
 // DELETE /actuator/application-info/{cacheName}
 ```
 
-## Example 57: Docker Containerization - Layered JARs
+**Key Takeaway**: Custom actuator endpoints expose application-specific metrics—use `@Endpoint`, `@ReadOperation`, `@WriteOperation`, and `@DeleteOperation` to create management endpoints beyond Spring Boot's default actuators.
+
+### Example 57: Docker Containerization - Layered JARs
 
 Docker multi-stage builds with layered JARs optimize image size and build caching for faster deployments.
 
@@ -959,7 +991,9 @@ flowchart TD
     style G fill:#DE8F05,stroke:#000,color:#000
 ```
 
-## Example 58: Health Checks - Liveness vs Readiness
+**Key Takeaway**: Layered JARs with Docker multi-stage builds optimize image caching—dependencies layer rarely changes, enabling faster rebuilds and smaller image transfers when only application code updates.
+
+### Example 58: Health Checks - Liveness vs Readiness
 
 Kubernetes health probes distinguish between liveness (restart if unhealthy) and readiness (stop traffic if not ready).
 
@@ -1033,7 +1067,9 @@ public class ExternalApiHealthIndicator implements HealthIndicator {
 //     port: 8080
 ```
 
-## Example 59: Graceful Shutdown - In-Flight Request Handling
+**Key Takeaway**: Separate liveness and readiness probes in Kubernetes—liveness checks if application should restart (basic health), readiness checks if application can serve traffic (database connections, external dependencies).
+
+### Example 59: Graceful Shutdown - In-Flight Request Handling
 
 Graceful shutdown ensures in-flight requests complete before application termination, preventing data loss.
 
@@ -1088,7 +1124,9 @@ public class LongRunningController {
 // 4. Shuts down
 ```
 
-## Example 60: Externalized Configuration - Spring Cloud Config
+**Key Takeaway**: Enable graceful shutdown with `server.shutdown=graceful`—Spring Boot waits for in-flight requests to complete (up to configured timeout) before shutting down, preventing abrupt connection closures during deployments.
+
+### Example 60: Externalized Configuration - Spring Cloud Config
 
 Spring Cloud Config Server provides centralized configuration management for distributed systems with environment-specific profiles.
 
@@ -1157,9 +1195,1404 @@ public class ConfigClientController {
 // Refresh config: POST /actuator/refresh
 ```
 
+**Key Takeaway**: Spring Cloud Config Server centralizes configuration—applications fetch environment-specific properties from a Git repository, enabling configuration changes without redeployment using `@RefreshScope` and actuator refresh endpoint.
+
+---
+
+### Example 61: Kubernetes ConfigMaps and Secrets
+
+Integrate Spring Boot with Kubernetes ConfigMaps for configuration and Secrets for sensitive data.
+
+```java
+// pom.xml: spring-cloud-starter-kubernetes-fabric8-config
+
+@RestController
+@RequestMapping("/api/k8s")
+public class K8sConfigController {
+    @Value("${app.environment}")
+    private String environment; // => From ConfigMap
+
+    @Value("${db.password}")
+    private String dbPassword; // => From Secret
+
+    @Value("${app.feature.newUI:false}")
+    private boolean newUI; // => From ConfigMap with default
+
+    @GetMapping("/config")
+    public Map<String, String> getConfig() {
+        return Map.of(
+            "environment", environment,
+            "dbPasswordLength", String.valueOf(dbPassword.length()), // Don't expose!
+            "newUI", String.valueOf(newUI)
+        );
+    }
+}
+```
+
+```yaml
+# configmap.yaml
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: myapp-config
+data:
+  application.yml: |
+    app:
+      environment: production
+      feature:
+        newUI: true
+    spring:
+      datasource:
+        url: jdbc:postgresql://postgres:5432/mydb
+```
+
+```yaml
+# secret.yaml
+apiVersion: v1
+kind: Secret
+metadata:
+  name: myapp-secrets
+type: Opaque
+data:
+  db.password: cGFzc3dvcmQxMjM= # base64 encoded "password123"
+```
+
+```yaml
+# deployment.yaml
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: myapp
+spec:
+  replicas: 3
+  template:
+    spec:
+      containers:
+        - name: myapp
+          image: myapp:latest
+          env:
+            - name: SPRING_PROFILES_ACTIVE
+              value: kubernetes
+            - name: db.password
+              valueFrom:
+                secretKeyRef:
+                  name: myapp-secrets
+                  key: db.password
+          volumeMounts:
+            - name: config
+              mountPath: /config
+              readOnly: true
+      volumes:
+        - name: config
+          configMap:
+            name: myapp-config
+```
+
+```yaml
+# application-kubernetes.yml
+spring:
+  config:
+    import: "kubernetes:"
+  cloud:
+    kubernetes:
+      config:
+        enabled: true
+        sources:
+          - name: myapp-config
+      secrets:
+        enabled: true
+        sources:
+          - name: myapp-secrets
+```
+
+```mermaid
+%% Color Palette: Blue #0173B2, Orange #DE8F05, Teal #029E73, Purple #CC78BC, Brown #CA9161
+graph TD
+    K8s[Kubernetes Cluster] --> CM[ConfigMap<br/>myapp-config]
+    K8s --> Secret[Secret<br/>myapp-secrets]
+
+    CM -->|Mount as Volume| Pod1[Pod 1]
+    CM -->|Mount as Volume| Pod2[Pod 2]
+    Secret -->|Inject as Env| Pod1
+    Secret -->|Inject as Env| Pod2
+
+    Pod1 --> App1[Spring Boot App]
+    Pod2 --> App2[Spring Boot App]
+
+    App1 -->|Reads| Config[application.yml<br/>from ConfigMap]
+    App1 -->|Reads| Env[DB_PASSWORD<br/>from Secret]
+
+    style K8s fill:#0173B2,color:#fff
+    style CM fill:#029E73,color:#fff
+    style Secret fill:#DE8F05,color:#000
+    style Pod1 fill:#CC78BC,color:#000
+    style App1 fill:#CA9161,color:#000
+```
+
+**Key Takeaway**: Use Kubernetes ConfigMaps for non-sensitive configuration and Secrets for credentials—Spring Cloud Kubernetes automatically reloads configuration when ConfigMaps/Secrets change without pod restarts.
+
+---
+
+### Example 62: API Gateway Pattern with Spring Cloud Gateway
+
+Create an API gateway for routing, load balancing, and cross-cutting concerns.
+
+```java
+// pom.xml: spring-cloud-starter-gateway
+
+@Configuration
+public class GatewayConfig {
+    @Bean
+    public RouteLocator customRouteLocator(RouteLocatorBuilder builder) {
+        return builder.routes()
+            // User service routing
+            .route("user-service", r -> r
+                .path("/api/users/**")
+                .filters(f -> f
+                    .stripPrefix(1) // Remove /api prefix
+                    .addRequestHeader("X-Gateway", "spring-cloud-gateway")
+                    .circuitBreaker(c -> c
+                        .setName("userServiceCircuitBreaker")
+                        .setFallbackUri("forward:/fallback/users")
+                    )
+                )
+                .uri("lb://USER-SERVICE") // Load-balanced via Eureka
+            )
+            // Order service routing
+            .route("order-service", r -> r
+                .path("/api/orders/**")
+                .filters(f -> f
+                    .stripPrefix(1)
+                    .rewritePath("/orders/(?<segment>.*)", "/${segment}")
+                    .retry(c -> c.setRetries(3))
+                )
+                .uri("lb://ORDER-SERVICE")
+            )
+            // Rate limiting
+            .route("limited-route", r -> r
+                .path("/api/public/**")
+                .filters(f -> f.requestRateLimiter(c -> c
+                    .setRateLimiter(redisRateLimiter())
+                    .setKeyResolver(new PrincipalNameKeyResolver())
+                ))
+                .uri("lb://PUBLIC-SERVICE")
+            )
+            .build();
+    }
+
+    @Bean
+    public RedisRateLimiter redisRateLimiter() {
+        return new RedisRateLimiter(10, 20); // 10 requests per second, burst 20
+    }
+}
+
+// Global filters
+@Component
+public class AuthenticationGlobalFilter implements GlobalFilter, Ordered {
+    @Override
+    public Mono<Void> filter(ServerWebExchange exchange, GatewayFilterChain chain) {
+        String authHeader = exchange.getRequest().getHeaders().getFirst("Authorization");
+
+        if (authHeader == null || !authHeader.startsWith("Bearer ")) {
+            exchange.getResponse().setStatusCode(HttpStatus.UNAUTHORIZED);
+            return exchange.getResponse().setComplete();
+        }
+
+        // Validate JWT token
+        String token = authHeader.substring(7);
+        if (!isValidToken(token)) {
+            exchange.getResponse().setStatusCode(HttpStatus.FORBIDDEN);
+            return exchange.getResponse().setComplete();
+        }
+
+        return chain.filter(exchange);
+    }
+
+    @Override
+    public int getOrder() {
+        return -100; // Execute early in filter chain
+    }
+
+    private boolean isValidToken(String token) {
+        return token != null && !token.isEmpty();
+    }
+}
+
+// Fallback controller
+@RestController
+@RequestMapping("/fallback")
+public class FallbackController {
+    @GetMapping("/users")
+    public ResponseEntity<Map<String, String>> userFallback() {
+        return ResponseEntity.status(HttpStatus.SERVICE_UNAVAILABLE)
+            .body(Map.of("error", "User service temporarily unavailable"));
+    }
+}
+```
+
+```yaml
+# application.yml
+spring:
+  cloud:
+    gateway:
+      discovery:
+        locator:
+          enabled: true
+          lower-case-service-id: true
+      default-filters:
+        - name: Retry
+          args:
+            retries: 3
+            methods: GET,POST
+        - name: CircuitBreaker
+          args:
+            name: defaultCircuitBreaker
+```
+
+```mermaid
+%% Color Palette: Blue #0173B2, Orange #DE8F05, Teal #029E73, Purple #CC78BC, Brown #CA9161
+flowchart TD
+    Client[Client] --> Gateway[API Gateway<br/>:8080]
+
+    Gateway -->|/api/users/**| UserService[User Service<br/>:8081]
+    Gateway -->|/api/orders/**| OrderService[Order Service<br/>:8082]
+    Gateway -->|/api/products/**| ProductService[Product Service<br/>:8083]
+
+    Gateway --> Filters[Global Filters:<br/>Authentication<br/>Rate Limiting<br/>Circuit Breaker]
+
+    Filters --> Fallback[Fallback<br/>Controller]
+
+    style Client fill:#0173B2,color:#fff
+    style Gateway fill:#029E73,color:#fff
+    style UserService fill:#DE8F05,color:#000
+    style OrderService fill:#CC78BC,color:#000
+    style ProductService fill:#CA9161,color:#000
+    style Filters fill:#0173B2,color:#fff
+```
+
+**Key Takeaway**: Spring Cloud Gateway centralizes routing, authentication, rate limiting, and circuit breaking—use predicates for routing logic and filters for cross-cutting concerns across all microservices.
+
+---
+
+### Example 63: Event Sourcing Pattern
+
+Implement event sourcing to persist all state changes as events for audit trails and replays.
+
+```java
+// Event store
+@Entity
+public class DomainEvent {
+    @Id
+    @GeneratedValue
+    private Long id;
+
+    private String aggregateId;
+    private String eventType;
+    private String payload; // JSON
+    private LocalDateTime occurredAt;
+    private int version;
+
+    // getters/setters
+}
+
+@Repository
+public interface EventStore extends JpaRepository<DomainEvent, Long> {
+    List<DomainEvent> findByAggregateIdOrderByVersionAsc(String aggregateId);
+}
+
+// Domain aggregate
+public class Order {
+    private String id;
+    private String customerId;
+    private List<OrderItem> items = new ArrayList<>();
+    private OrderStatus status;
+    private List<DomainEvent> uncommittedEvents = new ArrayList<>();
+
+    public void placeOrder(String customerId, List<OrderItem> items) {
+        this.id = UUID.randomUUID().toString();
+        this.customerId = customerId;
+        this.items = items;
+        this.status = OrderStatus.PLACED;
+
+        raiseEvent(new OrderPlacedEvent(id, customerId, items, LocalDateTime.now()));
+    }
+
+    public void cancelOrder() {
+        if (status == OrderStatus.SHIPPED) {
+            throw new IllegalStateException("Cannot cancel shipped order");
+        }
+
+        this.status = OrderStatus.CANCELLED;
+        raiseEvent(new OrderCancelledEvent(id, LocalDateTime.now()));
+    }
+
+    private void raiseEvent(Object event) {
+        DomainEvent domainEvent = new DomainEvent();
+        domainEvent.setAggregateId(id);
+        domainEvent.setEventType(event.getClass().getSimpleName());
+        domainEvent.setPayload(toJson(event));
+        domainEvent.setOccurredAt(LocalDateTime.now());
+        domainEvent.setVersion(uncommittedEvents.size() + 1);
+
+        uncommittedEvents.add(domainEvent);
+    }
+
+    public static Order fromEvents(List<DomainEvent> events) {
+        Order order = new Order();
+        for (DomainEvent event : events) {
+            order.apply(event);
+        }
+        return order;
+    }
+
+    private void apply(DomainEvent event) {
+        switch (event.getEventType()) {
+            case "OrderPlacedEvent" -> {
+                OrderPlacedEvent e = fromJson(event.getPayload(), OrderPlacedEvent.class);
+                this.id = e.orderId();
+                this.customerId = e.customerId();
+                this.items = e.items();
+                this.status = OrderStatus.PLACED;
+            }
+            case "OrderCancelledEvent" -> {
+                this.status = OrderStatus.CANCELLED;
+            }
+        }
+    }
+
+    public List<DomainEvent> getUncommittedEvents() {
+        return uncommittedEvents;
+    }
+}
+
+// Service
+@Service
+public class OrderService {
+    @Autowired
+    private EventStore eventStore;
+
+    public void placeOrder(String customerId, List<OrderItem> items) {
+        Order order = new Order();
+        order.placeOrder(customerId, items);
+
+        // Save events
+        eventStore.saveAll(order.getUncommittedEvents());
+    }
+
+    public Order getOrder(String orderId) {
+        List<DomainEvent> events = eventStore.findByAggregateIdOrderByVersionAsc(orderId);
+        return Order.fromEvents(events); // Rebuild from events
+    }
+
+    public void cancelOrder(String orderId) {
+        Order order = getOrder(orderId); // Rebuild from events
+        order.cancelOrder();
+
+        eventStore.saveAll(order.getUncommittedEvents());
+    }
+}
+
+record OrderPlacedEvent(String orderId, String customerId, List<OrderItem> items, LocalDateTime at) {}
+record OrderCancelledEvent(String orderId, LocalDateTime at) {}
+record OrderItem(String productId, int quantity, BigDecimal price) {}
+enum OrderStatus { PLACED, SHIPPED, CANCELLED }
+```
+
+**Key Takeaway**: Event sourcing persists state changes as immutable events—rebuild aggregate state by replaying events, enabling complete audit trails, time travel debugging, and event-driven architectures.
+
+---
+
+### Example 64: CQRS Pattern - Command Query Responsibility Segregation
+
+Separate read and write models for scalability and different optimization strategies.
+
+```java
+// Command model (write side)
+@Entity
+@Table(name = "orders_write")
+public class OrderWriteModel {
+    @Id
+    private String id;
+    private String customerId;
+    private BigDecimal totalAmount;
+    private OrderStatus status;
+    private LocalDateTime createdAt;
+    // Optimized for writes
+}
+
+@Repository
+public interface OrderCommandRepository extends JpaRepository<OrderWriteModel, String> {}
+
+// Query model (read side)
+@Entity
+@Table(name = "orders_read")
+public class OrderReadModel {
+    @Id
+    private String id;
+    private String customerName;
+    private String customerEmail;
+    private BigDecimal totalAmount;
+    private int itemCount;
+    private OrderStatus status;
+    private LocalDateTime createdAt;
+    // Denormalized, optimized for reads
+}
+
+@Repository
+public interface OrderQueryRepository extends JpaRepository<OrderReadModel, String> {
+    List<OrderReadModel> findByCustomerNameContaining(String name);
+    List<OrderReadModel> findByStatusAndCreatedAtAfter(OrderStatus status, LocalDateTime after);
+}
+
+// Command service (write operations)
+@Service
+public class OrderCommandService {
+    @Autowired
+    private OrderCommandRepository commandRepo;
+
+    @Autowired
+    private ApplicationEventPublisher eventPublisher;
+
+    @Transactional
+    public String createOrder(CreateOrderCommand command) {
+        OrderWriteModel order = new OrderWriteModel();
+        order.setId(UUID.randomUUID().toString());
+        order.setCustomerId(command.customerId());
+        order.setTotalAmount(command.totalAmount());
+        order.setStatus(OrderStatus.PLACED);
+        order.setCreatedAt(LocalDateTime.now());
+
+        commandRepo.save(order);
+
+        // Publish event for read model update
+        eventPublisher.publishEvent(new OrderCreatedEvent(
+            order.getId(),
+            order.getCustomerId(),
+            order.getTotalAmount()
+        ));
+
+        return order.getId();
+    }
+}
+
+// Query service (read operations)
+@Service
+public class OrderQueryService {
+    @Autowired
+    private OrderQueryRepository queryRepo;
+
+    public List<OrderReadModel> searchOrders(String customerName) {
+        return queryRepo.findByCustomerNameContaining(customerName);
+    }
+
+    public List<OrderReadModel> getRecentOrders(OrderStatus status, int days) {
+        LocalDateTime since = LocalDateTime.now().minusDays(days);
+        return queryRepo.findByStatusAndCreatedAtAfter(status, since);
+    }
+}
+
+// Event handler to synchronize read model
+@Component
+public class OrderReadModelUpdater {
+    @Autowired
+    private OrderQueryRepository queryRepo;
+
+    @Autowired
+    private CustomerRepository customerRepo;
+
+    @EventListener
+    @Async
+    public void handleOrderCreated(OrderCreatedEvent event) {
+        Customer customer = customerRepo.findById(event.customerId()).orElseThrow();
+
+        OrderReadModel readModel = new OrderReadModel();
+        readModel.setId(event.orderId());
+        readModel.setCustomerName(customer.getName());
+        readModel.setCustomerEmail(customer.getEmail());
+        readModel.setTotalAmount(event.totalAmount());
+        readModel.setItemCount(event.itemCount());
+        readModel.setStatus(OrderStatus.PLACED);
+        readModel.setCreatedAt(LocalDateTime.now());
+
+        queryRepo.save(readModel);
+        // Read model updated asynchronously
+    }
+}
+
+record CreateOrderCommand(String customerId, BigDecimal totalAmount) {}
+record OrderCreatedEvent(String orderId, String customerId, BigDecimal totalAmount) {}
+```
+
+```mermaid
+%% Color Palette: Blue #0173B2, Orange #DE8F05, Teal #029E73, Purple #CC78BC, Brown #CA9161
+flowchart TD
+    UI[User Interface]
+
+    UI -->|Commands| CommandAPI[Command API]
+    UI -->|Queries| QueryAPI[Query API]
+
+    CommandAPI --> WriteDB[(Write DB<br/>Normalized<br/>OrderWriteModel)]
+    QueryAPI --> ReadDB[(Read DB<br/>Denormalized<br/>OrderReadModel)]
+
+    WriteDB -->|Events| EventBus[Event Bus]
+    EventBus --> ReadSync[Read Model<br/>Synchronizer]
+    ReadSync --> ReadDB
+
+    style UI fill:#0173B2,color:#fff
+    style CommandAPI fill:#DE8F05,color:#000
+    style QueryAPI fill:#029E73,color:#fff
+    style WriteDB fill:#CC78BC,color:#000
+    style ReadDB fill:#CA9161,color:#000
+    style EventBus fill:#0173B2,color:#fff
+```
+
+**Key Takeaway**: CQRS separates write (command) and read (query) models—optimize writes for consistency and reads for performance with denormalized data, synchronizing via events for eventual consistency.
+
+---
+
+### Example 65: Multi-Tenancy Strategies
+
+Implement multi-tenancy to serve multiple customers from a single application instance.
+
+```java
+// Strategy 1: Shared Database, Separate Schemas
+@Configuration
+public class MultiTenantDataSourceConfig {
+    @Bean
+    public DataSource dataSource() {
+        return new TenantAwareDataSource();
+    }
+}
+
+public class TenantAwareDataSource extends AbstractRoutingDataSource {
+    @Override
+    protected Object determineCurrentLookupKey() {
+        return TenantContext.getCurrentTenant();
+        // => Returns "tenant1", "tenant2", etc.
+    }
+}
+
+@Component
+public class TenantContext {
+    private static final ThreadLocal<String> CURRENT_TENANT = new ThreadLocal<>();
+
+    public static void setCurrentTenant(String tenant) {
+        CURRENT_TENANT.set(tenant);
+    }
+
+    public static String getCurrentTenant() {
+        return CURRENT_TENANT.get();
+    }
+
+    public static void clear() {
+        CURRENT_TENANT.remove();
+    }
+}
+
+// Tenant interceptor
+@Component
+public class TenantInterceptor implements HandlerInterceptor {
+    @Override
+    public boolean preHandle(HttpServletRequest request, HttpServletResponse response, Object handler) {
+        String tenantId = request.getHeader("X-Tenant-ID");
+
+        if (tenantId == null) {
+            response.setStatus(HttpServletResponse.SC_BAD_REQUEST);
+            return false;
+        }
+
+        TenantContext.setCurrentTenant(tenantId);
+        return true;
+    }
+
+    @Override
+    public void afterCompletion(HttpServletRequest request, HttpServletResponse response,
+                               Object handler, Exception ex) {
+        TenantContext.clear();
+    }
+}
+
+// Strategy 2: Discriminator Column (Shared Schema)
+@Entity
+@FilterDef(name = "tenantFilter", parameters = @ParamDef(name = "tenantId", type = String.class))
+@Filter(name = "tenantFilter", condition = "tenant_id = :tenantId")
+public class Product {
+    @Id
+    @GeneratedValue
+    private Long id;
+
+    private String tenantId; // Discriminator column
+    private String name;
+    private BigDecimal price;
+
+    // getters/setters
+}
+
+@Repository
+public interface ProductRepository extends JpaRepository<Product, Long> {
+    // Automatically filtered by tenant
+}
+
+// Enable filter in session
+@Component
+@Aspect
+public class TenantFilterAspect {
+    @PersistenceContext
+    private EntityManager entityManager;
+
+    @Before("execution(* com.example.demo.repository.*.*(..))")
+    public void enableTenantFilter() {
+        String tenantId = TenantContext.getCurrentTenant();
+        Session session = entityManager.unwrap(Session.class);
+        Filter filter = session.enableFilter("tenantFilter");
+        filter.setParameter("tenantId", tenantId);
+    }
+}
+
+// Usage in controller
+@RestController
+@RequestMapping("/api/products")
+public class ProductController {
+    @Autowired
+    private ProductRepository productRepository;
+
+    @GetMapping
+    public List<Product> getProducts() {
+        // Automatically filtered by tenant from X-Tenant-ID header
+        return productRepository.findAll();
+    }
+
+    @PostMapping
+    public Product createProduct(@RequestBody Product product) {
+        product.setTenantId(TenantContext.getCurrentTenant());
+        return productRepository.save(product);
+    }
+}
+```
+
+**Key Takeaway**: Choose multi-tenancy strategy based on isolation needs—separate databases for strong isolation, separate schemas for moderate isolation, or discriminator columns for maximum resource sharing with application-level filtering.
+
+---
+
+### Example 66: Spring Native - GraalVM Native Images
+
+Compile Spring Boot applications to native executables for faster startup and lower memory footprint.
+
+```java
+// Standard Spring Boot application
+@SpringBootApplication
+public class NativeApplication {
+    public static void main(String[] args) {
+        SpringApplication.run(NativeApplication.class, args);
+    }
+
+    @Bean
+    public CommandLineRunner runner() {
+        return args -> {
+            System.out.println("Native application started in: " +
+                ManagementFactory.getRuntimeMXBean().getUptime() + "ms");
+            // => JVM: ~2000ms, Native: ~50ms
+        };
+    }
+}
+
+@RestController
+@RequestMapping("/api/native")
+public class NativeController {
+    @GetMapping("/info")
+    public Map<String, Object> getInfo() {
+        return Map.of(
+            "runtime", System.getProperty("java.vm.name"),
+            "memoryUsed", Runtime.getRuntime().totalMemory() - Runtime.getRuntime().freeMemory(),
+            "startupTime", ManagementFactory.getRuntimeMXBean().getUptime()
+        );
+        // => Native uses ~10-50MB vs JVM ~100-200MB
+    }
+}
+```
+
+```xml
+<!-- pom.xml -->
+<dependencies>
+    <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-web</artifactId>
+    </dependency>
+</dependencies>
+
+<build>
+    <plugins>
+        <plugin>
+            <groupId>org.graalvm.buildtools</groupId>
+            <artifactId>native-maven-plugin</artifactId>
+        </plugin>
+        <plugin>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-maven-plugin</artifactId>
+            <configuration>
+                <image>
+                    <builder>paketobuildpacks/builder-jammy-tiny:latest</builder>
+                    <env>
+                        <BP_NATIVE_IMAGE>true</BP_NATIVE_IMAGE>
+                    </env>
+                </image>
+            </configuration>
+        </plugin>
+    </plugins>
+</build>
+```
+
+```bash
+# Build native image
+./mvnw -Pnative native:compile
+
+# Or with Docker
+./mvnw spring-boot:build-image -Pnative
+
+# Run native executable
+./target/myapp
+
+# Startup comparison:
+# JVM:    ~2000ms, ~200MB RAM
+# Native: ~50ms,   ~20MB RAM (40x faster, 10x less memory)
+```
+
+```yaml
+# application.yml - Optimize for native
+spring:
+  aot:
+    enabled: true
+  main:
+    lazy-initialization: true
+```
+
+**Key Takeaway**: GraalVM native images provide instant startup (~50ms vs ~2s) and minimal memory footprint (~20MB vs ~200MB)—ideal for serverless, containers, and microservices, but with longer build times and reflection/proxy limitations.
+
+---
+
+### Example 67: GraphQL API with Spring for GraphQL
+
+Expose flexible GraphQL APIs for efficient data fetching.
+
+```java
+// pom.xml: spring-boot-starter-graphql
+
+// Domain model
+@Entity
+public class Author {
+    @Id
+    @GeneratedValue
+    private Long id;
+    private String name;
+
+    @OneToMany(mappedBy = "author")
+    private List<Book> books;
+
+    // getters/setters
+}
+
+@Entity
+public class Book {
+    @Id
+    @GeneratedValue
+    private Long id;
+    private String title;
+    private int pages;
+
+    @ManyToOne
+    @JoinColumn(name = "author_id")
+    private Author author;
+
+    // getters/setters
+}
+
+// GraphQL schema (schema.graphqls in resources/graphql/)
+// type Query {
+//     bookById(id: ID!): Book
+//     books: [Book]
+//     authors: [Author]
+// }
+//
+// type Mutation {
+//     createBook(title: String!, pages: Int!, authorId: ID!): Book
+// }
+//
+// type Book {
+//     id: ID!
+//     title: String!
+//     pages: Int!
+//     author: Author
+// }
+//
+// type Author {
+//     id: ID!
+//     name: String!
+//     books: [Book]
+// }
+
+// Controller (Query resolvers)
+@Controller
+public class BookController {
+    @Autowired
+    private BookRepository bookRepository;
+
+    @Autowired
+    private AuthorRepository authorRepository;
+
+    @QueryMapping
+    public Book bookById(@Argument Long id) {
+        return bookRepository.findById(id).orElse(null);
+        // => Resolves Query.bookById
+    }
+
+    @QueryMapping
+    public List<Book> books() {
+        return bookRepository.findAll();
+        // => Resolves Query.books
+    }
+
+    @QueryMapping
+    public List<Author> authors() {
+        return authorRepository.findAll();
+    }
+
+    @MutationMapping
+    public Book createBook(@Argument String title, @Argument int pages, @Argument Long authorId) {
+        Author author = authorRepository.findById(authorId).orElseThrow();
+
+        Book book = new Book();
+        book.setTitle(title);
+        book.setPages(pages);
+        book.setAuthor(author);
+
+        return bookRepository.save(book);
+        // => Resolves Mutation.createBook
+    }
+
+    @SchemaMapping(typeName = "Book", field = "author")
+    public Author getAuthor(Book book) {
+        return book.getAuthor();
+        // => Resolves Book.author field (N+1 query risk!)
+    }
+}
+
+// Optimize N+1 with DataLoader
+@Configuration
+public class DataLoaderConfig {
+    @Bean
+    public BatchLoaderRegistry batchLoaderRegistry(AuthorRepository authorRepository) {
+        return registry -> registry.forTypePair(Long.class, Author.class)
+            .registerBatchLoader((authorIds, env) -> {
+                List<Author> authors = authorRepository.findAllById(authorIds);
+                return Mono.just(authors); // Batch load authors
+            });
+    }
+}
+```
+
+```graphql
+# Query example
+query {
+  books {
+    id
+    title
+    pages
+    author {
+      name
+    }
+  }
+}
+
+# Mutation example
+mutation {
+  createBook(title: "Spring Boot Guide", pages: 500, authorId: 1) {
+    id
+    title
+    author {
+      name
+    }
+  }
+}
+```
+
+```mermaid
+%% Color Palette: Blue #0173B2, Orange #DE8F05, Teal #029E73, Purple #CC78BC, Brown #CA9161
+graph TD
+    Client[GraphQL Client] -->|Query/Mutation| Gateway[GraphQL Endpoint<br/>/graphql]
+
+    Gateway --> Resolver[Resolver<br/>@QueryMapping<br/>@MutationMapping]
+
+    Resolver --> Repo1[BookRepository]
+    Resolver --> Repo2[AuthorRepository]
+
+    Repo1 --> DB[(Database)]
+    Repo2 --> DB
+
+    Loader[DataLoader<br/>Batch Loading] -.->|Prevents N+1| Resolver
+
+    style Client fill:#0173B2,color:#fff
+    style Gateway fill:#029E73,color:#fff
+    style Resolver fill:#DE8F05,color:#000
+    style Repo1 fill:#CC78BC,color:#000
+    style Repo2 fill:#CA9161,color:#000
+    style DB fill:#0173B2,color:#fff
+```
+
+**Key Takeaway**: GraphQL enables clients to request exactly the fields they need—use `@QueryMapping` and `@MutationMapping` for resolvers, and `DataLoader` to prevent N+1 queries when fetching nested relationships.
+
+---
+
+### Example 68: Saga Pattern - Distributed Transactions
+
+Implement Saga pattern for managing distributed transactions across microservices.
+
+```java
+// Order Saga Orchestrator
+@Service
+public class OrderSaga {
+    @Autowired
+    private RestTemplate restTemplate;
+
+    @Autowired
+    private KafkaTemplate<String, String> kafkaTemplate;
+
+    public void processOrder(OrderRequest request) {
+        String orderId = UUID.randomUUID().toString();
+
+        try {
+            // Step 1: Reserve inventory
+            ReservationResponse reservation = reserveInventory(request.productId(), request.quantity());
+
+            // Step 2: Process payment
+            PaymentResponse payment = processPayment(request.customerId(), request.totalAmount());
+
+            // Step 3: Create order
+            createOrder(orderId, request, reservation.reservationId(), payment.transactionId());
+
+            // Step 4: Send notification
+            sendNotification(request.customerId(), "Order " + orderId + " placed successfully");
+
+            kafkaTemplate.send("order-events", "OrderCompleted", orderId);
+        } catch (Exception e) {
+            // Compensating transactions (rollback)
+            compensate(orderId, e);
+        }
+    }
+
+    private ReservationResponse reserveInventory(String productId, int quantity) {
+        ResponseEntity<ReservationResponse> response = restTemplate.postForEntity(
+            "http://inventory-service/api/reservations",
+            new ReservationRequest(productId, quantity),
+            ReservationResponse.class
+        );
+
+        if (!response.getStatusCode().is2xxSuccessful()) {
+            throw new SagaException("Inventory reservation failed");
+        }
+
+        return response.getBody();
+    }
+
+    private PaymentResponse processPayment(String customerId, BigDecimal amount) {
+        ResponseEntity<PaymentResponse> response = restTemplate.postForEntity(
+            "http://payment-service/api/payments",
+            new PaymentRequest(customerId, amount),
+            PaymentResponse.class
+        );
+
+        if (!response.getStatusCode().is2xxSuccessful()) {
+            throw new SagaException("Payment processing failed");
+        }
+
+        return response.getBody();
+    }
+
+    private void compensate(String orderId, Exception cause) {
+        // Cancel inventory reservation
+        restTemplate.delete("http://inventory-service/api/reservations/" + orderId);
+
+        // Refund payment
+        restTemplate.postForEntity(
+            "http://payment-service/api/refunds",
+            new RefundRequest(orderId),
+            Void.class
+        );
+
+        // Publish failure event
+        kafkaTemplate.send("order-events", "OrderFailed", orderId);
+    }
+}
+
+// Choreography-based Saga (alternative)
+@Service
+public class InventoryService {
+    @KafkaListener(topics = "order-created")
+    public void handleOrderCreated(String orderId) {
+        try {
+            reserveInventory(orderId);
+            kafkaTemplate.send("inventory-reserved", orderId);
+        } catch (Exception e) {
+            kafkaTemplate.send("inventory-reservation-failed", orderId);
+        }
+    }
+
+    @KafkaListener(topics = "order-cancelled")
+    public void handleOrderCancelled(String orderId) {
+        releaseInventory(orderId);
+    }
+}
+
+@Service
+public class PaymentService {
+    @KafkaListener(topics = "inventory-reserved")
+    public void handleInventoryReserved(String orderId) {
+        try {
+            processPayment(orderId);
+            kafkaTemplate.send("payment-completed", orderId);
+        } catch (Exception e) {
+            kafkaTemplate.send("payment-failed", orderId);
+            kafkaTemplate.send("order-cancelled", orderId); // Trigger compensation
+        }
+    }
+}
+
+record OrderRequest(String customerId, String productId, int quantity, BigDecimal totalAmount) {}
+record ReservationRequest(String productId, int quantity) {}
+record ReservationResponse(String reservationId, boolean success) {}
+record PaymentRequest(String customerId, BigDecimal amount) {}
+record PaymentResponse(String transactionId, boolean success) {}
+record RefundRequest(String orderId) {}
+```
+
+**Key Takeaway**: Saga pattern manages distributed transactions through orchestration (central coordinator) or choreography (event-driven)—implement compensating transactions for rollback, as distributed ACID transactions aren't feasible across microservices.
+
+---
+
+### Example 69: Performance Tuning - JVM and Spring Boot
+
+Optimize Spring Boot applications for production performance.
+
+```java
+// JVM tuning
+// -Xms512m -Xmx2g              # Heap size (min 512MB, max 2GB)
+// -XX:MaxMetaspaceSize=256m    # Metaspace limit
+// -XX:+UseG1GC                 # G1 garbage collector
+// -XX:MaxGCPauseMillis=200     # GC pause target
+// -XX:+HeapDumpOnOutOfMemoryError  # Dump on OOM
+// -Xlog:gc*:file=gc.log        # GC logging
+
+// Spring Boot optimizations
+@Configuration
+public class PerformanceConfig {
+    // Connection pool tuning
+    @Bean
+    public HikariConfig hikariConfig() {
+        HikariConfig config = new HikariConfig();
+        config.setMaximumPoolSize(20); // Max DB connections
+        config.setMinimumIdle(5);      // Minimum idle connections
+        config.setConnectionTimeout(30000);
+        config.setIdleTimeout(600000);
+        config.setMaxLifetime(1800000);
+        return config;
+    }
+
+    // Async executor tuning
+    @Bean
+    public TaskExecutor taskExecutor() {
+        ThreadPoolTaskExecutor executor = new ThreadPoolTaskExecutor();
+        executor.setCorePoolSize(10);
+        executor.setMaxPoolSize(50);
+        executor.setQueueCapacity(100);
+        executor.setThreadNamePrefix("async-");
+        executor.setRejectedExecutionHandler(new ThreadPoolExecutor.CallerRunsPolicy());
+        executor.initialize();
+        return executor;
+    }
+
+    // HTTP client tuning
+    @Bean
+    public RestTemplate restTemplate() {
+        HttpComponentsClientHttpRequestFactory factory =
+            new HttpComponentsClientHttpRequestFactory();
+        factory.setConnectTimeout(5000);
+        factory.setReadTimeout(10000);
+
+        return new RestTemplate(factory);
+    }
+}
+
+// Caching strategy
+@Service
+public class ProductService {
+    @Cacheable(value = "products", key = "#id")
+    public Product getProduct(Long id) {
+        // Expensive operation cached
+        return productRepository.findById(id).orElseThrow();
+    }
+
+    @CachePut(value = "products", key = "#product.id")
+    public Product updateProduct(Product product) {
+        return productRepository.save(product);
+    }
+
+    @CacheEvict(value = "products", key = "#id")
+    public void deleteProduct(Long id) {
+        productRepository.deleteById(id);
+    }
+}
+
+// Lazy initialization
+@SpringBootApplication
+@EnableCaching
+public class Application {
+    public static void main(String[] args) {
+        System.setProperty("spring.main.lazy-initialization", "true");
+        // => Faster startup, but slower first request
+        SpringApplication.run(Application.class, args);
+    }
+}
+
+// Actuator metrics
+@Component
+public class PerformanceMetrics {
+    private final MeterRegistry registry;
+
+    public PerformanceMetrics(MeterRegistry registry) {
+        this.registry = registry;
+    }
+
+    public void recordOrderProcessing(long durationMs) {
+        registry.timer("order.processing.time").record(durationMs, TimeUnit.MILLISECONDS);
+    }
+
+    public void incrementErrorCount() {
+        registry.counter("orders.errors").increment();
+    }
+}
+```
+
+```yaml
+# application-prod.yml
+spring:
+  jpa:
+    properties:
+      hibernate:
+        jdbc:
+          batch_size: 20 # Batch inserts
+          fetch_size: 50
+        order_inserts: true
+        order_updates: true
+    hibernate:
+      ddl-auto: none # Don't auto-create schema in production
+
+server:
+  tomcat:
+    threads:
+      max: 200 # Max request threads
+      min-spare: 10
+    max-connections: 10000
+    accept-count: 100
+
+management:
+  metrics:
+    export:
+      prometheus:
+        enabled: true
+```
+
+**Key Takeaway**: Tune JVM (heap size, GC), connection pools (HikariCP), thread pools (async executor), and enable caching to optimize Spring Boot performance—monitor with Actuator metrics and adjust based on production load patterns.
+
+---
+
+### Example 70: Observability Stack Integration
+
+Integrate comprehensive observability with metrics, logs, and traces.
+
+```java
+// pom.xml:
+// spring-boot-starter-actuator
+// micrometer-registry-prometheus
+// micrometer-tracing-bridge-brave
+// zipkin-reporter-brave
+
+@SpringBootApplication
+public class ObservableApplication {
+    public static void main(String[] args) {
+        SpringApplication.run(ObservableApplication.class, args);
+    }
+}
+
+// Custom metrics
+@RestController
+@RequestMapping("/api/orders")
+public class OrderController {
+    private final Counter orderCounter;
+    private final Timer orderTimer;
+
+    public OrderController(MeterRegistry registry) {
+        this.orderCounter = Counter.builder("orders.created")
+            .description("Total orders created")
+            .tags("service", "order-service")
+            .register(registry);
+
+        this.orderTimer = Timer.builder("orders.processing.time")
+            .description("Order processing duration")
+            .publishPercentiles(0.5, 0.95, 0.99)
+            .register(registry);
+    }
+
+    @PostMapping
+    public ResponseEntity<Order> createOrder(@RequestBody OrderRequest request) {
+        return orderTimer.record(() -> {
+            Order order = processOrder(request);
+            orderCounter.increment();
+            return ResponseEntity.ok(order);
+        });
+        // => Metrics: orders.created (count), orders.processing.time (percentiles)
+    }
+}
+
+// Distributed tracing
+@Service
+public class OrderService {
+    @Autowired
+    private RestTemplate restTemplate; // Auto-instrumented for tracing
+
+    @NewSpan("process-order") // Custom span
+    public Order processOrder(OrderRequest request) {
+        // Trace ID automatically propagated to downstream services
+        PaymentResponse payment = restTemplate.postForObject(
+            "http://payment-service/api/payments",
+            request,
+            PaymentResponse.class
+        );
+
+        InventoryResponse inventory = restTemplate.postForObject(
+            "http://inventory-service/api/reserve",
+            request,
+            InventoryResponse.class
+        );
+
+        return new Order(UUID.randomUUID().toString(), request.customerId());
+    }
+}
+
+// Structured logging
+@Component
+public class RequestLoggingFilter extends OncePerRequestFilter {
+    private static final Logger log = LoggerFactory.getLogger(RequestLoggingFilter.class);
+
+    @Override
+    protected void doFilterInternal(HttpServletRequest request, HttpServletResponse response,
+                                   FilterChain filterChain) throws ServletException, IOException {
+        String traceId = Tracer.currentSpan().context().traceId();
+
+        MDC.put("traceId", traceId);
+        MDC.put("spanId", Tracer.currentSpan().context().spanId());
+        MDC.put("path", request.getRequestURI());
+
+        try {
+            filterChain.doFilter(request, response);
+        } finally {
+            log.info("Request completed: {} {} - Status: {}",
+                request.getMethod(),
+                request.getRequestURI(),
+                response.getStatus()
+            );
+            // => {"traceId":"abc123","spanId":"def456","path":"/api/orders","level":"INFO",...}
+
+            MDC.clear();
+        }
+    }
+}
+```
+
+```yaml
+# application.yml - Observability configuration
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health,prometheus,metrics,info
+  metrics:
+    export:
+      prometheus:
+        enabled: true
+    distribution:
+      percentiles-histogram:
+        http.server.requests: true
+  tracing:
+    sampling:
+      probability: 1.0 # 100% sampling (reduce in production)
+  zipkin:
+    tracing:
+      endpoint: http://localhost:9411/api/v2/spans
+
+logging:
+  pattern:
+    console: "%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level [%X{traceId},%X{spanId}] %logger{36} - %msg%n"
+  level:
+    root: INFO
+    com.example.demo: DEBUG
+```
+
+```yaml
+# docker-compose.yml - Observability stack
+version: "3"
+services:
+  prometheus:
+    image: prom/prometheus
+    ports:
+      - "9090:9090"
+    volumes:
+      - ./prometheus.yml:/etc/prometheus/prometheus.yml
+
+  grafana:
+    image: grafana/grafana
+    ports:
+      - "3000:3000"
+    environment:
+      - GF_SECURITY_ADMIN_PASSWORD=admin
+
+  zipkin:
+    image: openzipkin/zipkin
+    ports:
+      - "9411:9411"
+
+  loki:
+    image: grafana/loki
+    ports:
+      - "3100:3100"
+```
+
+```mermaid
+%% Color Palette: Blue #0173B2, Orange #DE8F05, Teal #029E73, Purple #CC78BC, Brown #CA9161
+graph TD
+    App[Spring Boot App] -->|Metrics| Prometheus[Prometheus<br/>:9090]
+    App -->|Traces| Zipkin[Zipkin<br/>:9411]
+    App -->|Logs| Loki[Loki<br/>:3100]
+
+    Prometheus --> Grafana[Grafana<br/>:3000]
+    Zipkin --> Grafana
+    Loki --> Grafana
+
+    Grafana -->|Dashboards| User[Developer]
+
+    style App fill:#0173B2,color:#fff
+    style Prometheus fill:#DE8F05,color:#000
+    style Zipkin fill:#029E73,color:#fff
+    style Loki fill:#CC78BC,color:#000
+    style Grafana fill:#CA9161,color:#000
+    style User fill:#0173B2,color:#fff
+```
+
+**Key Takeaway**: Comprehensive observability requires metrics (Prometheus), traces (Zipkin), and logs (Loki)—use Micrometer for metrics, automatic span propagation for distributed tracing, and structured logging with MDC for trace correlation.
+
+---
+
 ## Summary
 
-These 20 advanced examples cover production-grade Spring Boot patterns:
+These 30 advanced examples cover production-grade Spring Boot patterns:
 
 **Microservices Communication (41-44)**: RestTemplate synchronous calls, WebClient reactive non-blocking, Feign declarative clients, Eureka service discovery
 
@@ -1171,4 +2604,12 @@ These 20 advanced examples cover production-grade Spring Boot patterns:
 
 **Production Deployment (57-60)**: Docker multi-stage builds with layered JARs, liveness/readiness health probes, graceful shutdown handling in-flight requests, Spring Cloud Config centralized configuration
 
-Master these patterns to build resilient, observable, and production-ready Spring Boot microservices.
+**Kubernetes & Cloud-Native (61-62)**: Kubernetes ConfigMaps and Secrets integration, API Gateway pattern with Spring Cloud Gateway for routing and filters
+
+**Event-Driven Architecture (63-64)**: Event sourcing for complete audit trails, CQRS pattern separating read and write models for scalability
+
+**Advanced Patterns (65-68)**: Multi-tenancy strategies (separate databases/schemas/discriminator columns), GraalVM native images for instant startup, GraphQL APIs with DataLoader, Saga pattern for distributed transactions
+
+**Performance & Observability (69-70)**: JVM and Spring Boot performance tuning (connection pools, caching, thread pools), comprehensive observability stack integration (Prometheus, Zipkin, Loki, Grafana)
+
+Master these patterns to build resilient, observable, scalable, and production-ready Spring Boot microservices for cloud-native environments.
